logs/cir-cuda/JACOBI1D_jacobi1D.hip.cpp.cir.log
COMMAND: /workspace/llvm-bin/clang-23 -fclangir --gcc-install-dir=/usr/lib/gcc/x86_64-linux-gnu/11 -x hip --hip-path=/opt/rocm-6.3.0 --offload-arch=gfx942 -D__AMDGCN_WAVEFRONT_SIZE=64 -I/root/polybenchGpu/CUDA/JACOBI1D -std=c++17 -O0 -c /root/polybenchGpu/HIP/JACOBI1D/jacobi1D.hip.cpp -I/root/polybenchGpu/HIP -I/root/polybenchGpu/HIP/JACOBI1D -o /tmp/JACOBI1D_jacobi1D.hip.cpp.cir.o

/root/polybenchGpu/HIP/JACOBI1D/jacobi1D.hip.cpp:117:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  117 |         hipMalloc(&Agpu, N * sizeof(DATA_TYPE));
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/JACOBI1D/jacobi1D.hip.cpp:118:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  118 |         hipMalloc(&Bgpu, N * sizeof(DATA_TYPE));
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/JACOBI1D/jacobi1D.hip.cpp:120:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  120 |         hipMemcpy(Agpu, A, N * sizeof(DATA_TYPE), hipMemcpyHostToDevice);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/JACOBI1D/jacobi1D.hip.cpp:121:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  121 |         hipMemcpy(Bgpu, B, N * sizeof(DATA_TYPE), hipMemcpyHostToDevice);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/JACOBI1D/jacobi1D.hip.cpp:133:3: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  133 |                 hipDeviceSynchronize();
      |                 ^~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/JACOBI1D/jacobi1D.hip.cpp:135:3: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  135 |                 hipDeviceSynchronize();
      |                 ^~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/JACOBI1D/jacobi1D.hip.cpp:143:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  143 |         hipMemcpy(A_outputFromGpu, Agpu, sizeof(DATA_TYPE) * N, hipMemcpyDeviceToHost);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/JACOBI1D/jacobi1D.hip.cpp:144:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  144 |         hipMemcpy(B_outputFromGpu, Bgpu, sizeof(DATA_TYPE) * N, hipMemcpyDeviceToHost);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/JACOBI1D/jacobi1D.hip.cpp:146:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  146 |         hipFree(Agpu);
      |         ^~~~~~~~~~~~~
/root/polybenchGpu/HIP/JACOBI1D/jacobi1D.hip.cpp:147:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  147 |         hipFree(Bgpu);
      |         ^~~~~~~~~~~~~
loc("/opt/rocm-6.3.0/include/hip/amd_detail/hip_assert.h":70:3): error: 'cir.cast' op result type address space does not match the address space of the operand
fatal error: CIR module verification error before running CIR-to-CIR passes
clang-23: error: clang frontend command failed with exit code 70 (use -v to see invocation)
clang version 23.0.0git (git@github.com:llvm/llvm-project.git f30c3bb2647d4385c9d2035b9a661ecc0bcca813)
Target: x86_64-unknown-linux-gnu
Thread model: posix
InstalledDir: /workspace/llvm-bin
Build config: +assertions
clang-23: note: diagnostic msg: 
********************

PLEASE ATTACH THE FOLLOWING FILES TO THE BUG REPORT:
Preprocessed source(s) and associated run script(s) are located at:
clang-23: note: diagnostic msg: /tmp/jacobi1D-gfx942-a0e277.hip
clang-23: note: diagnostic msg: /tmp/jacobi1D-d746cf.hip
clang-23: note: diagnostic msg: /tmp/jacobi1D-gfx942-a0e277.sh
clang-23: note: diagnostic msg: 

********************
